<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news_feed"
        android:title="@string/news_feed" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/category" />

    <item
        android:id="@+id/navigation_author"
        android:icon="@drawable/ic_author"
        android:title="@string/author" />

    <item
        android:id="@+id/navigation_about_us"
        android:icon="@drawable/ic_about_us"
        android:title="@string/about_us" />

    <item
        android:id="@+id/navigation_contact_us"
        android:icon="@drawable/ic_contact_us"
        android:title="@string/contact_us_menu" />

</menu>
