<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.yeyintkoko.techtricity.custom_control.MyanBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_margin="@dimen/margin_normal"
            android:layout_gravity="center"
            android:text="@string/join_us"
            android:textSize="@dimen/txt_size_xx_large"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <ImageView
                android:id="@+id/iv_google_plus"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:padding="@dimen/margin_small"
                android:layout_weight="1"
                android:src="@drawable/ic_google_plus"/>
            <ImageView
                android:id="@+id/iv_facebook"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:padding="@dimen/margin_small"
                android:layout_weight="1"
                android:src="@drawable/facebook"/>
            <ImageView
                android:id="@+id/iv_instagram"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:padding="@dimen/margin_small"
                android:layout_weight="1"
                android:src="@drawable/instagram"/>
            <ImageView
                android:id="@+id/iv_youtube"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:padding="@dimen/margin_small"
                android:layout_weight="1"
                android:src="@drawable/youtube"/>
            <ImageView
                android:id="@+id/iv_twitter"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:padding="@dimen/margin_small"
                android:layout_weight="1"
                android:src="@drawable/twitter"/>
        </LinearLayout>
        <com.yeyintkoko.techtricity.custom_control.MyanBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/contact_us"
            android:layout_gravity="center"
            android:textSize="@dimen/txt_size_xx_large"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_phone"
                    android:layout_marginEnd="@dimen/margin_small"/>
                <com.yeyintkoko.techtricity.custom_control.MyanBoldTextView
                    android:id="@+id/tv_phone1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/txt_size_normal"
                    android:textAlignment="center"
                    android:text="+ 959 696 650 218"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_phone"
                    android:layout_marginEnd="@dimen/margin_small"/>
                <com.yeyintkoko.techtricity.custom_control.MyanBoldTextView
                    android:id="@+id/tv_phone2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/txt_size_normal"
                    android:text="+ 959 695 070 892"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/gmail"
                android:layout_marginEnd="@dimen/margin_small"/>
            <com.yeyintkoko.techtricity.custom_control.MyanBoldTextView
                android:id="@+id/tv_gmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txt_size_normal"
                android:text="admin@techtricitymm.com"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_provider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/potrait_small_height"
                    android:layout_margin="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:src="@drawable/contact_us_mimeo"/>
                <com.yeyintkoko.techtricity.custom_control.MyanEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:maxLines="1"
                    android:background="@drawable/edt_search_grey"
                    android:textSize="@dimen/txt_size_normal"
                    android:inputType="textPersonName"
                    android:hint="@string/enter_your_name"
                    android:padding="16dp"/>
                <com.yeyintkoko.techtricity.custom_control.MyanEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:maxLines="1"
                    android:background="@drawable/edt_search_grey"
                    android:textSize="@dimen/txt_size_normal"
                    android:inputType="phone"
                    android:hint="@string/enter_your_phone_number"
                    android:padding="16dp"/>
                <com.yeyintkoko.techtricity.custom_control.MyanEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:maxLines="1"
                    android:background="@drawable/edt_search_grey"
                    android:textSize="@dimen/txt_size_normal"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_your_email"
                    android:padding="16dp"/>
                <com.yeyintkoko.techtricity.custom_control.MyanEditText
                    android:id="@+id/et_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:maxLines="1"
                    android:background="@drawable/edt_search_grey"
                    android:textSize="@dimen/txt_size_normal"
                    android:inputType="text"
                    android:hint="@string/enter_your_subject"
                    android:padding="16dp"/>
                <com.yeyintkoko.techtricity.custom_control.MyanEditText
                    android:id="@+id/et_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:lines="4"
                    android:gravity="top"
                    android:maxLines="10"
                    android:background="@drawable/edt_search_grey"
                    android:textSize="@dimen/txt_size_normal"
                    android:inputType="textMultiLine"
                    android:hint="@string/enter_your_message"
                    android:padding="16dp"/>
                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:text="Send Message"
                    android:padding="@dimen/margin_small"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/btn_gradient"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>