<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_normal">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBanner"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_height="@dimen/banner_height"/>
            <me.relex.circleindicator.CircleIndicator2
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <com.yeyintkoko.techtricity.custom_control.MyanBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size_xx_large"
                android:layout_margin="@dimen/margin_normal"
                android:text="@string/news"
                android:textColor="@color/colorWhite"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNews"
                android:layout_width="match_parent"
                android:layout_height="@dimen/potrait_square_medium"
                android:layout_marginBottom="@dimen/margin_normal"
                android:clipChildren="true"
                android:overScrollMode="never"
                app:layoutManager="com.ramotion.cardslider.CardSliderLayoutManager"
                />

            <TextSwitcher
                android:id="@+id/ts_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"/>
            <TextSwitcher
                android:id="@+id/ts_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_normal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">
                <TextSwitcher
                    android:id="@+id/ts_author"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_normal" />
                <TextSwitcher
                    android:id="@+id/ts_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"/>
            </LinearLayout>
            <com.yeyintkoko.techtricity.custom_control.MyanBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size_xx_large"
                android:layout_margin="@dimen/margin_normal"
                android:text="@string/features"
                android:textColor="@color/colorWhite"/>
            <com.yarolegovich.discretescrollview.DiscreteScrollView
                android:id="@+id/rv_feature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"/>
            <com.yeyintkoko.techtricity.custom_control.MyanBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size_xx_large"
                android:layout_margin="@dimen/margin_normal"
                android:text="@string/how_to"
                android:textColor="@color/colorWhite"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_how_to"
                app:cardCornerRadius="@dimen/card_corner_radius"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:layout_height="300dp"
                app:cardPreventCornerOverlap="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/ivHowToImage"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:foreground="@drawable/black_gradient_overlay"
                        app:layout_constraintDimensionRatio="@string/photo_potrait_ratio"
                        android:scaleType="centerCrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <RelativeLayout
                        android:id="@+id/llTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:orientation="vertical">
                            <TextSwitcher
                                android:id="@+id/ts_howto_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="@dimen/margin_normal"
                                android:layout_marginEnd="@dimen/margin_normal"
                                android:layout_marginBottom="@dimen/margin_normal"/>
                            <LinearLayout
                                android:id="@+id/llAuthorAndTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/margin_normal"
                                android:weightSum="2"
                                android:orientation="horizontal">
                                <TextSwitcher
                                    android:id="@+id/ts_howto_author"
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginStart="@dimen/margin_normal" />
                                <TextSwitcher
                                    android:id="@+id/ts_howto_time"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:textAlignment="textEnd"
                                    android:layout_marginStart="@dimen/margin_normal"
                                    android:layout_marginEnd="@dimen/margin_normal"/>
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <View
                                android:id="@+id/reverse"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1" />

                            <View
                                android:id="@+id/skip"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1" />
                        </LinearLayout>
                        <com.teresaholfeld.stories.StoriesProgressView
                            android:id="@+id/howto"
                            android:paddingLeft="@dimen/margin_normal"
                            android:paddingRight="@dimen/margin_normal"
                            android:layout_width="match_parent"
                            android:layout_alignParentTop="true"
                            android:layout_height="3dp"
                            android:layout_marginTop="@dimen/margin_normal" />
                    </RelativeLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>